--- a/index.html
+++ b/index.html
@@ -55,11 +55,14 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <a href="html.html" ><img src="images/css.jpg" style="width:100%" alt="CSS"> </a>
       <a href="arduino.html" ><img src="images/arduino.jpg" style="width:100%" alt="Arduino"> </a>
     </div>
+    <hr class="w3-opacity">
   </div>
 
   <div class="w3-row" id="project">
     <h2 class="w3-center"><b>My Final Projects</b></h2>
-    <h3 class="w3-center">What I did</h3>
+    <div class="w3-row w3-bar-block w3-center">
+    <h2><a href="process.html" onclick="w3_close()" class="w3-bar-item w3-button">What I did</a></h2>
+    </div>
     <div class="w3-third">
     <a href="1.html" ><img src="images/1.jpg" style="width:100%" alt="3D Printing"> </a>
     </div>
@@ -70,9 +73,6 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
     <div class="w3-third">
       <a href="1.html"><img src="images/1.jpg" style="width:100%" alt="Coding"> </a>
-    </div>
-    <div class="w3-row w3-bar-block w3-center">
-    <h2><a href="process.html" onclick="w3_close()" class="w3-bar-item w3-button">The Process</a></h2>
     </div>
     <hr class="w3-opacity">
   </div>
