--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <div class="w3-row w3-bar-block w3-center">
     <h2><a href="wil.html" onclick="w3_close()" class="w3-bar-item w3-button">What I Learnt</a></h2>
     <div class="w3-third">
-    <a href="safety.html" ><img src="images/safety.jpg" style="width:100%" alt="Safety&Tools" ></a>
+    <a href="safety.html"><img src="images/safety.jpg" style="width:100%" alt="Safety&Tools" ></a>
     <a href="css.html"><img src="images/github.jpg" style="width:100%" alt="GitHub"> </a>
     </div>
 
@@ -52,14 +52,13 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     </div>
 
     <div class="w3-third">
-      <a href="html.html" ><img src="images/css.jpg" style="width:100%" alt="CSS"> </a>
-      <a href="arduino.html" ><img src="images/arduino.jpg" style="width:100%" alt="Arduino"> </a>
+      <a href="html.html"><img src="images/css.jpg" style="width:100%" alt="CSS"> </a>
+      <a href="arduino.html"><img src="images/arduino.jpg" style="width:100%" alt="Arduino"> </a>
     </div>
-    <hr class="w3-opacity">
   </div>
-
+<p></p>
   <div class="w3-row" id="project">
-    <h2 class="w3-center"><b>My Final Projects</b></h2>
+    <h2 class="w3-center"><b>My Final Project</b></h2>
     <div class="w3-row w3-bar-block w3-center">
     <h2><a href="process.html" onclick="w3_close()" class="w3-bar-item w3-button">What I did</a></h2>
     </div>
@@ -74,8 +73,8 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <div class="w3-third">
       <a href="1.html"><img src="images/1.jpg" style="width:100%" alt="Coding"> </a>
     </div>
-    <hr class="w3-opacity">
   </div>
+  <p></p>
 
   <!-- About section -->
   <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32" id="about">
