--- a/index.html
+++ b/index.html
@@ -57,21 +57,23 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     </div>
   </div>
 <p></p>
+
   <div class="w3-row" id="project">
-    <h2 class="w3-center"><b>My Final Project</b></h2>
+    <h1 class="w3-center w3-grey w3-padding-16"><b>My Final Project</b></h1>
+    <p class="w3-center"><img src="images/1.jpg" style="width:950px" alt="final project"></p>
     <div class="w3-row w3-bar-block w3-center">
-    <h2><a href="process.html" onclick="w3_close()" class="w3-bar-item w3-button">What I did</a></h2>
+      <h1><a href="process.html" onclick="w3_close()" class="w3-bar-item w3-button w3-center">What I did</a></h1>
     </div>
-    <div class="w3-third">
-    <a href="1.html" ><img src="images/1.jpg" style="width:100%" alt="3D Printing"> </a>
-    </div>
-
-    <div class="w3-third">
-      <a href="1.html"><img src="images/1.jpg" style="width:100%" alt="Lazer Cutting"> </a>
+    <div class="w3-row w3-bar-block w3-center">
+      <h2><a href="3d.html" onclick="w3_close()" class="w3-bar-item w3-button w3-center"><b>3D PRINTING</b></a></h2>
     </div>
 
-    <div class="w3-third">
-      <a href="1.html"><img src="images/1.jpg" style="width:100%" alt="Coding"> </a>
+    <div class="w3-row w3-bar-block w3-center">
+      <h2><a href="laser.html" onclick="w3_close()" class="w3-bar-item w3-button w3-center"><b>LASER CUTTING</b></a></h2>
+    </div>
+
+    <div class="w3-row w3-bar-block w3-center">
+      <h2><a href="code.html" onclick="w3_close()" class="w3-bar-item w3-button w3-center"><b>CODING</b></a></h2>
     </div>
   </div>
   <p></p>
