--- a/process.html
+++ b/process.html
@@ -50,17 +50,11 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <p></p>
         &nbsp;
         <p><b>Extra stuff</b></p>
-        <ul class="w3-ul">
-          <li class="w3-padding-16 w3-bar-item">
-            <a href="" onclick="w3_close()" class="w3-button w3-center">Presentation Slide</a>
-          </li>
-          <li class="w3-padding-16 w3-bar-item">
-            <a href="" onclick="w3_close()" class="w3-button w3-center">Presentation Video</a>
-          </li>
-          <li class="w3-padding-16 w3-bar-item">
-            <a href="" onclick="w3_close()" class="w3-button w3-center">Ownership Card</a>
-          </li>
-        </ul>
+        <p>
+        <a href="" onclick="w3_close()" class="w3-button w3-center w3-bar-item">Presentation Slide</a>
+        <a href="" onclick="w3_close()" class="w3-button w3-center w3-bar-item">Presentation Video</a>
+        <a href="" onclick="w3_close()" class="w3-button w3-center w3-bar-item">Ownership Card</a>
+        </p>
       </div>
     </div>
   </div>
