--- a/process.html
+++ b/process.html
@@ -55,11 +55,9 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <p><img src="images/casebottom.jpeg" style="width:100%" alt="finish side"></p>
         &nbsp;
         <p><b>Extra stuff</b></p>
-        <p>
-        <a href="" onclick="w3_close()" class="w3-button w3-center w3-bar-item">Presentation Slide</a>
-        <a href="" onclick="w3_close()" class="w3-button w3-center w3-bar-item">Presentation Video</a>
-        <a href="" onclick="w3_close()" class="w3-button w3-center w3-bar-item">Ownership Card</a>
-        </p>
+        <p><a href="" onclick="w3_close()" class="w3-button w3-center w3-bar-item w3-row">Presentation Slide</a>
+        <a href="" onclick="w3_close()" class="w3-button w3-center w3-bar-item w3-row">Presentation Video</a>
+        <a href="" onclick="w3_close()" class="w3-button w3-center w3-bar-item w3-row">Ownership Card</a></p>
       </div>
     </div>
   </div>
