--- a/process.html
+++ b/process.html
@@ -51,8 +51,8 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <p>I then secured the platforms down with some hot glue.</p>
         <p><img src="images/implement3.jpeg" style="width:100%" alt="adding speakers"></p>
         <p>In the end after some trial and error, this is the finished product.</p>
-        <p><img src="images/casebottom.jpeg" style="width:100%" alt="finish front"></p>
-        <p><img src="images/casebottom.jpeg" style="width:100%" alt="finish side"></p>
+        <p><img src="images/finish1.jpeg" style="width:100%" alt="finish front"></p>
+        <p><img src="images/finish2.jpeg" style="width:100%" alt="finish side"></p>
         &nbsp;
         <p><b>Extra stuff</b></p>
         <p><a href="" onclick="w3_close()" class="w3-button w3-center w3-bar-item w3-row">Presentation Slide</a>
